services_and_networking/ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    tier: frontend
    app: nginx
spec:
  ports:
  - name: "443"
    port: 443
    protocol: TCP
    targetPort: 443
  type: ClusterIP
  selector:
    labels:
      app: nginx
      tier: frontend
