services_and_networking/NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-pub
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: nginx-pub
