services_and_networking/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-pub
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: nginx-pub
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-pub
  template:
    metadata:
      labels:
        app: nginx-pub
    spec:
      containers:
      - name: nginx-pub
        image: nginx
        ports:
        - containerPort: 80
